Ajuste de estilos
Se realiza maqueta para Tour of Heroes, con el uso de Bootstrap, algo de color y conducta responsive

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,91 @@
 <!DOCTYPE html>
-<h1>{{title}}</h1>
+<html>
+
+<head>
+    <meta charset='utf-8'>
+    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
+    <title>Page Title</title>
+    <meta name='viewport' content='width=device-width, initial-scale=1'>
+
+</head>
+
+<body>
+    <header>
+        <div class="container-fluid bg-light col-12">
+            <h1>{{title}}</h1>
+            <button type="button" class="btn btn-secondary">Dashboard</button>
+            <button type="button" class="btn btn-secondary">Heroes</button>
+        </div>
+    </header>
+    <section>
+        <div class="container text-center col-12">
+            <h3>Principales personajes</h3>
+            <button type="button" class="btn btn-primary">Gengis Khan</button>
+            <button type="button" class="btn btn-primary">Erwin Rommel</button>
+            <button type="button" class="btn btn-primary">Julio Cesar</button>
+            <button type="button" class="btn btn-primary">Saladino</button>
+        </div>
+    </section>
+    <section>
+        <div class="row container col-12 col-md-6 col-sm-12">
+            <div class="card" style="width: 18rem;">
+                <img src="https://www.biografiasyvidas.com/biografia/s/fotos/saladino.jpg" class="card-img-top"
+                    alt="Saladino draw">
+                <div class="card-body text-dark">
+                    <h3 class="card-title">Saladino info. card</h3>
+                    <p class="card-text">Uno de los más conocidas figuras del medioevo. General de la dinastia de los
+                        Ayubiés y conquistador musulmán en Oriente Medio</p>
+                </div>
+                <ul class="list-group list-group-flush">
+                    <li class="list-group-item"><span><strong>Habilidades: </strong>Estrategia eficaz, diplomacia,
+                            generosidad, entre otras</span></li>
+                    <li class="list-group-item"><span><strong>Batalla conocida: </strong>Contra los cruzados en Cuernos
+                            de Hattin</span></li>
+                    <li class="list-group-item"><span><strong>Nobiliario: </strong>Sultán de Egipto y Siria</span></li>
+                </ul>
+                <div class="card-body">
+                    <a href="#" class="btn btn-secondary">Regresar</a>
+                </div>
+            </div>
+            <div class="container col-12 col-md-6 col-sm-12">
+                <h4>El listado de personajes</h4>
+                <div class="btn-group-vertical">
+                    <a href="#" class="btn btn-warning">Julio Cesar</a>
+                    <a href="#" class="btn btn-warning">Gengis Khan</a>
+                    <a href="#" class="btn btn-warning">Saladino</a>
+                    <a href="#" class="btn btn-warning">Erwin Rommel</a>
+                </div>
+                <br>
+                <p>Saladino es la tarjeta elegida</p>
+                <a href="#" class="btn btn-secondary">Ver detalles</a>
+            </div>
+        </div>
+    </section>
+
+    <!--
+    <div class="container">
+        <h2>My Heroes</h2>
+        <ul class="heroes">
+            <li><span class="badge">1.</span>Julio Cesar</li>
+            <li><span class="badge">2.</span>Gengis Khan</li>
+            <li><span class="badge">3.</span>Saladino</li>
+            <li><span class="badge">4.</span>Erwin Rommel</li>
+        </ul>
+    </div>
+-->
+
+    <!-- Optional JavaScript; choose one of the two! -->
+
+    <!-- Option 1: Bootstrap Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
+
+    <!-- Option 2: Separate Popper and Bootstrap JS -->
+    <!--
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.2/dist/umd/popper.min.js" integrity="sha384-q9CRHqZndzlxGLOj+xrdLDJa9ittGte1NksRmgJKeCV9DrM7Kz868XYqsKWPpAmn" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
+    -->
+</body>
+
+</html>
