--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,72 @@
 /* You can add global styles to this file, and also import other style files */
+
+h1 {
+    color: rgb(101, 71, 23);
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 250%;
+}
+
+h2,
+h3 {
+    color: #444;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: lighter;
+}
+
+header,
+section {
+    margin: 2px;
+    padding: 6px;
+}
+
+/*span {
+    font-weight: bolder;
+}*/
+
+body {
+    /*margin: 6px;*/
+    padding: 6px;
+    margin: 1em;
+    background-color: rgb(58, 131, 66, 35%);
+}
+
+body,
+input[type="text"],
+button {
+    color: #333;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+}
+
+a {
+    margin: 6px;
+    border: none;
+    border-radius: 4px;
+}
+button {
+    background-color: #eee;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    color: black;
+    font-size: 1.2rem;
+    padding: 1rem;
+    margin-right: 1rem;
+    margin-bottom: 1rem;
+    margin-top: 1rem;
+}
+
+button:hover {
+    background-color: black;
+    color: white;
+}
+
+button:disabled {
+    background-color: #eee;
+    color: #aaa;
+    cursor: auto;
+}
+
+/* everywhere else*/
+* {
+    font-family: Arial, Helvetica, sans-serif;
+}
