Correccion incorreta escritura y fallo ejecucion

--- a/src/app/character/character.component.html
+++ b/src/app/character/character.component.html
@@ -1,5 +1,5 @@
-<h2>{{chracter.name | uppercase}} Detalles</h2>
-<div><span>id: </span>{{chracter.id}}</div>
+<h2>{{character.name | uppercase}} Detalles</h2>
+<div><span>id: </span>{{character.id}}</div>
 <div>
 	<label>nombre:
 	<input [(ngModel)] = "character.name" placeholder = "nombre aqui"/>
