Se ajusta proyecto a lo requerido por el enunciado en la semana 21

--- a/src/styles.css
+++ b/src/styles.css
@@ -58,7 +58,7 @@ a {
 }
 button {
     background-color: #eee;
-    border: none;
+    border: 3px solid;
     border-radius: 4px;
     cursor: pointer;
     color: black;
