--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,2 @@
-<!DOCTYPE html>
-<html>
-<body>
-    <h1>{{title}}</h1> 
-	<app-character></app-character>	
-</body>
-
-</html>
+<h1>{{title}}</h1> 
+<app-heroes></app-heroes>
